        - Renombrar los componentes TextArea dentro de \TextAreaDefault.tsx
        - Renombrar los componentes TextArea dentro de en \TextAreaRounded.tsx
        - Renombrar los componentes TextArea dentro de en \TextAreaNormal.tsx
        - Organizar importaciones para empaquetar los componentes Input y TextArea en main.ts
        - Cambiar version de libreria en package.json para renderizar componentes en otro proyecto.
        - Creada carpeta chips en \components.
        - Creados componentes chips en \Chips.tsx.
    Observaciones:
        - Continuar con la creacion de componentes Chips.


        2025/01/24 Components y Screen - Valentina Rincon
    Cambios:
        - Creada carpeta tooltip en \components.
        - Creado componente tooltip en \Tooltip.tsx.
        - Creado componente ChipsComponents en \componentes
        - Modificado el componente Chips para organizar los componentes con y sin icono en \Chips.tsx.
        - Organizar importaciones para empaquetar los componentes Chips en main.ts
        - Crear un archivo de barril para componentes chips en \chips\index.ts
        - Cambiar version de libreria en package.json para renderizar componentes Chips en otro proyecto.
        - Dar soporte a los componetes Chips para se puedan personalizar.
        - Renderizar componentes Chips y Tooltip en \home.tsx.
        - Crear estilos para Chips y Tooltip en \globals.css
    Observaciones:
    - Se está trabajando con los estilos del componente Tooltip para renderizarlo y empaquetarlo correctamente.

        2025/01/27 - Components y Screen - Valentina Rincón
    Cambios:
        - Refactorización de algunas líneas en los estilos del componente Tooltip en Tooltip.tsx.
    Observaciones:

        - Modificación de las propiedades del componente Tooltip en Home.tsx.
        - Actualmente se están ajustando los últimos detalles de los estilos del componente Tooltip.