@@ -71,3 +71,12 @@
 
         - Modificación de las propiedades del componente Tooltip en Home.tsx.
         - Actualmente se están ajustando los últimos detalles de los estilos del componente Tooltip.
+
+        2025/01/28 - Components y Screen - Valentina Rincón
+    Cambios:
+        - Se finalizaron los ajustes de estilos en el componente Tooltip ubicado en \Tooltip.tsx
+        - Se creó el componente Badge en \Badge.tsx
+        - Se añadió una nueva carpeta llamada badge en la ruta \components
+    Observaciones:
+
+        - Quedan pendientes algunos ajustes finales para permitir que el tamaño de los componentes Badge sea completamente personalizable.
